# FBPINN

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_style.yml  tests.yml
examples/: decomposition_with_hole.py  naca4.py
experiments/: fbpinn_all_lf_ode_1.py  fbpinn_all_lf_ode_3.py  fbpinn_all_lh_ode_1.py  fbpinn_all_lh_pde_1.py  fbpinn_all_lh_pde_2.py  fbpinn_all_nlf_ode_1.py  fbpinn_dep_full_lf_ode_1.py  fbpinn_dep_full_lh_ode_1.py  fbpinn_dep_full_lh_pde1.py  fbpinn_dep_full_lh_pde2.py  fbpinn_dep_full_lh_pde2_nonpretrained.py  fbpinn_layer_lf_ode_1.py  fbpinn_layer_lf_ode_3.py  fbpinn_layer_lh_ode_1.py  fbpinn_layer_lh_pde1.py  fbpinn_layer_lh_pde1_diff_initialize.py  fbpinn_layer_lh_pde2.py  fbpinn_layer_lh_pde2_diff_initialize.py  fbpinn_layer_nlf_ode_1.py  fbpinn_scheduler_lf_ode_1.py  fbpinn_scheduler_lh_pde1.py  fbpinn_seq_lf_ode_1.py  fbpinn_seq_lf_ode_3.py  fbpinn_seq_lh_ode_1.py  fbpinn_seq_lh_pde_1.py  fbpinn_seq_lh_pde_2.py  fbpinn_seq_nlf_ode_1.py  plot_functions.py
experiments/Functions/: LF_ODE_1.py  LF_ODE_1_submodels.py  LF_ODE_3.py  LF_ODE_3_submodels.py  LH_ODE_1.py  LH_ODE_1_observed.py  LH_ODE_1_submodels.py  LH_PDE1.py  LH_PDE1_submodels.py  LH_PDE2.py  LH_PDE2_submodels.py  NLF_ODE_1.py  NLF_ODE_1_submodels.py  phys_losses.py
experiments/complex_geometry/: cylinder_geometry.py  fbpinn_cylinder_full.py  fbpinn_nocylinder_full.py  fbpinn_poisson3d_full.py  fbpinn_viscid_full.py  finetune.py
experiments/training_strategies/: fbpinn_dep_full_lf_ode_1.py  fbpinn_dep_full_lh_ode_1.py  (+1 more)
geofbpinn/: __init__.py
src/: __init__.py
tests/: test_decomposition.py  test_geometry.py  test_polygon_decomposition.py
(+71 files in other folders)
